# Dev-Center

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  setup.sh  start.sh
src/dev_center_app/: Dockerfile  docker-entrypoint.sh  entrypoint.py  pyproject.toml
src/dev_center_app/backend/: __init__.py  app.py  context.py  lifespan.py
src/dev_center_app/backend/routers/: __init__.py
src/dev_center_app/config/runtime/: runtime_config.py
src/dev_center_app/frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
src/dev_center_app/frontend/src/: App.test.tsx  App.tsx  theme.test.ts  theme.ts
src/dev_center_app/libs/auth_checker/: __init__.py  auth_checker.py
src/dev_center_app/libs/state/: models.py  (+2 more)
src/dev_center_app/tests/: conftest.py  test_auth_checker.py  test_git_manager.py  test_projects_router.py  test_rules_router.py  test_scheduler.py  test_session_manager.py  test_sessions_router.py  test_settings_router.py  test_state.py
src/idh-app/: Dockerfile  entrypoint.py  entrypoint.sh  pyproject.toml
src/idh-app/backend/: __init__.py  app.py  context.py  lifespan.py
src/idh-app/config/: __init__.py
src/idh-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/idh-app/tests/: conftest.py  test_activity_log.py  test_agents_router.py  test_bridge_actions.py  test_bridge_manager.py  test_bridge_router.py  test_event_bus.py  test_git_manager.py  test_global_config_manager.py  test_health.py  test_memory.py  test_memory_router.py  test_memory_routes.py  test_monitoring_ws.py  test_openclaw_config_writer.py  test_projects_router.py  test_scheduler.py  test_settings_global.py  test_settings_model.py  test_settings_project.py  test_settings_router.py  test_settings_telegram_model.py  test_state_manager.py  test_state_models.py  test_telegram_notifier.py  test_webhook_client.py
(+218 files in other folders)
