[project]
name = "dev_center_app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "loggerplusplus>=1.0",
    "configplusplus>=0.1.1",
    "websockets>=12.0",
    "aiofiles>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = ["F541"]
